[package]
name = "sskr-tool"
authors = ["Kevin Smith <ksmithbaylor@gmail.com>"]
version = "0.1.0"
license = "MIT"
description = "A tool for splitting and recovering BIP-39 mnemonics according to the SSKR standard"
repository = "https://github.com/ksmithbaylor/sskr-tool"
keywords = ["sskr", "bip39", "bitcoin", "crypto", "mnemonic"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.72"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["alloc"] }
regex = "1.9.1"
hex = "0.4.3"
clap = { version = "4.3.19", features = ["derive"] }
tiny-bip39 = "1.0.0"
crc = "3.0.1"
dcbor = "0.7.4"
sskr = "0.1.2"
